# qmlib-examples

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  lsan.suppr  validate_and_sign.py
.github/: FUNDING.yml
.github/workflows/: clang.yml  doc.yml  sonar.yml
cmake/: ccache.cmake  example.cmake  exe.cmake  flags.cmake  iwyu.cmake  lib.cmake  merge.cmake  plugin.cmake  quick_test.cmake  systemlibrary.cmake  test.cmake  translate.cmake  version.cmake
scripts/: check-clang.sh  check-translations.sh  release_notes.sh  remove_test_tags.sh
sources/: CMakeLists.txt
sources/animation/: CMakeLists.txt  main.cpp
sources/animation/qml/: main.qml
sources/calendar/: CMakeLists.txt  main.cpp
sources/calendar/qml/: main-calendar.qml  main-dateinput.qml  main-datepicker.qml  main-day.qml  main-swipecalendar.qml  main-timeline.qml  main-timepicker.qml  main.qml
sources/colors/: CMakeLists.txt  main.cpp
sources/colors/qml/: ColorItem.qml  main.qml
sources/container/: CMakeLists.txt  main.cpp
sources/container/qml/: main-applicationwindow.qml  main-bottomsheet.qml  main-card.qml  main-carousel.qml  main-contractinglayout.qml  main-contractinglistview.qml  main-divider.qml  main-gridlist.qml  main-listitem.qml  main-listview.qml  main-page.qml  main-removelistitem.qml  main-swipelistitem.qml  main-topappbar.qml  main.qml
sources/control/: CMakeLists.txt  main.cpp
sources/control/qml/: main-bottomsheet.qml  main-buttons.qml  main-checkboxes.qml  main-chip.qml  main-combobox.qml  main-drawarea.qml  main-dropdownbutton.qml  main-emailfield.qml  main-floatingbutton.qml  main-floatingmenu.qml  main-longpressbutton.qml  main-menubutton.qml  main-morebutton.qml  main-navigationbar.qml  main-navigationrail.qml  main-pageindicator.qml  main-passwordfield.qml  main-popup.qml  main-radiobutton.qml  main-rangeslider.qml  main-roundscrollbar.qml  main-roundswipecombobox.qml  main-searchbar.qml  main-searchresult.qml  main-segments.qml  main-slider.qml  main-spinbox.qml  main-swipebutton.qml  main-switches.qml  main-tabbar.qml  main-textarea.qml  main-textfield.qml  main.qml  mainlist-view.qml
sources/dialog/: CMakeLists.txt  icons.qrc  main.cpp
sources/dialog/qml/: main-banner.qml  main-buttonconfirmation.qml  main-dialog.qml  main-dismissabledialog.qml  main-fullscreendialog.qml  main-snackbar.qml  main-validationdialog.qml  main.qml
sources/effects/: CMakeLists.txt  main.cpp
sources/effects/qml/: main-blackandwhite.qml  main-blend.qml  main-blur.qml  main-contrastbrightnesssaturation.qml  main-dropshadow.qml  main-greyscale.qml  main-halo.qml  main-homography.qml  main-lens.qml  main-mask.qml  main-rgbshift.qml  main.qml
sources/font/: CMakeLists.txt  fonts.qrc  main.cpp
sources/font/qml/: main-weight.qml  main.qml
sources/gadget/: CMakeLists.txt  main.cpp
sources/gadget/qml/: main-camerapermission.qml  main-contactform.qml  main-developeritem.qml  main-followus.qml  main-permissionpage.qml  main-servererror.qml  main-updatebanner.qml  main-updatepage.qml  main.qml
sources/gallery/: CMakeLists.txt
sources/gallery/example/: CMakeLists.txt  main.cpp
sources/gallery/example/qml/: main-pressanimation.qml  main.qml
sources/help/: CMakeLists.txt  main.cpp
sources/help/qml/: main-helpbutton.qml  main-helpitem.qml  main.qml
sources/icon/: CMakeLists.txt  main.cpp
sources/icon/qml/: main-colorizedicon.qml  main-iconlabel.qml  main-largeiconlabel.qml  main.qml
sources/image/: CMakeLists.txt  main.cpp
sources/image/qml/: main-avatar.qml  main-avatarselector.qml  main-carousel.qml  main-handle.qml  main-image.qml  main-imagelist.qml  main-maskedimage.qml  main-zoomableimage.qml  main.qml
sources/indicator/: CMakeLists.txt  main.cpp
sources/indicator/qml/: main-badge.qml  main-colormarker.qml  main-needle.qml  main-progressindicator.qml  main-progressoverlay.qml  main.qml
sources/panel/: CMakeLists.txt  main.cpp
sources/panel/qml/: main-buttons.qml  main-gallery.qml  main.qml
sources/plots/: CMakeLists.txt  main.cpp
sources/plots/qml/: bar-example.qml  donuts-example.qml  gradient-example.qml  gradientchart-example.qml  horizontalbar-example.qml  horizontalpercentbar-example.qml  horizontalstackedbar-example.qml  line-example.qml  main.qml  percentbar-example.qml  pie-example.qml  polar-example.qml  scatter-example.qml  spline-example.qml  stacked-example.qml  stackedbar-example.qml
sources/video/: CMakeLists.txt  main.cpp
sources/video/qml/: main-video.qml  main.qml
