add_subdirectory(animation)
add_subdirectory(calendar)
add_subdirectory(colors)
add_subdirectory(container)
add_subdirectory(control)
add_subdirectory(dialog)
add_subdirectory(effects)
add_subdirectory(font)
add_subdirectory(gadget)
add_subdirectory(help)
add_subdirectory(icon)
add_subdirectory(image)
add_subdirectory(indicator)
add_subdirectory(panel)

if (NOT EMSCRIPTEN)
	add_subdirectory(plots)
endif()

add_subdirectory(video)
add_subdirectory(gallery)
